[gd_scene load_steps=48 format=2]

[ext_resource path="res://Splash.gd" type="Script" id=1]
[ext_resource path="res://Playerboats/SplashPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://SplashUI.gd" type="Script" id=4]
[ext_resource path="res://AudioController.tscn" type="PackedScene" id=5]
[ext_resource path="res://SplashAudioController.gd" type="Script" id=6]
[ext_resource path="res://assets/ocean01.png" type="Texture" id=7]
[ext_resource path="res://assets/ocean02.png" type="Texture" id=8]
[ext_resource path="res://assets/ocean11.png" type="Texture" id=9]
[ext_resource path="res://assets/ocean12.png" type="Texture" id=10]
[ext_resource path="res://assets/ocean13.png" type="Texture" id=11]
[ext_resource path="res://assets/ocean14.png" type="Texture" id=12]
[ext_resource path="res://assets/ocean15.png" type="Texture" id=13]
[ext_resource path="res://assets/ocean16.png" type="Texture" id=14]
[ext_resource path="res://assets/ocean17.png" type="Texture" id=15]
[ext_resource path="res://assets/ocean18.png" type="Texture" id=16]
[ext_resource path="res://assets/ocean19.png" type="Texture" id=17]
[ext_resource path="res://assets/ocean20.png" type="Texture" id=18]
[ext_resource path="res://assets/ocean03.png" type="Texture" id=19]
[ext_resource path="res://assets/ocean21.png" type="Texture" id=20]
[ext_resource path="res://assets/ocean04.png" type="Texture" id=21]
[ext_resource path="res://assets/ocean05.png" type="Texture" id=22]
[ext_resource path="res://assets/ocean06.png" type="Texture" id=23]
[ext_resource path="res://assets/ocean07.png" type="Texture" id=24]
[ext_resource path="res://assets/ocean08.png" type="Texture" id=25]
[ext_resource path="res://assets/ocean09.png" type="Texture" id=26]
[ext_resource path="res://assets/ocean10.png" type="Texture" id=27]
[ext_resource path="res://assets/UI/uipack_fixed/PNG/green_button08.png" type="Texture" id=28]
[ext_resource path="res://assets/UI/uipack_fixed/PNG/blue_button08.png" type="Texture" id=29]
[ext_resource path="res://assets/Xolonium-Regular.ttf" type="DynamicFontData" id=30]
[ext_resource path="res://RigidBody2D.gd" type="Script" id=31]
[ext_resource path="res://EnemyLifeBar.tscn" type="PackedScene" id=32]
[ext_resource path="res://EnemyLifeBar.gd" type="Script" id=33]
[ext_resource path="res://explosions/Explosions.tscn" type="PackedScene" id=34]
[ext_resource path="res://labelTitle2.gd" type="Script" id=35]
[ext_resource path="res://labelTitle3.gd" type="Script" id=36]
[ext_resource path="res://labelTitle4.gd" type="Script" id=37]

[sub_resource type="AnimatedTexture" id=1]
flags = 6
frames = 21
fps = 21.0
frame_0/texture = ExtResource( 7 )
frame_1/texture = ExtResource( 8 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 19 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 21 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 22 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 23 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 24 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 25 )
frame_7/delay_sec = 0.0
frame_8/texture = ExtResource( 26 )
frame_8/delay_sec = 0.0
frame_9/texture = ExtResource( 27 )
frame_9/delay_sec = 0.0
frame_10/texture = ExtResource( 9 )
frame_10/delay_sec = 0.0
frame_11/texture = ExtResource( 10 )
frame_11/delay_sec = 0.0
frame_12/texture = ExtResource( 11 )
frame_12/delay_sec = 0.0
frame_13/texture = ExtResource( 12 )
frame_13/delay_sec = 0.0
frame_14/texture = ExtResource( 13 )
frame_14/delay_sec = 0.0
frame_15/texture = ExtResource( 14 )
frame_15/delay_sec = 0.0
frame_16/texture = ExtResource( 15 )
frame_16/delay_sec = 0.0
frame_17/texture = ExtResource( 16 )
frame_17/delay_sec = 0.0
frame_18/texture = ExtResource( 17 )
frame_18/delay_sec = 0.0
frame_19/texture = ExtResource( 18 )
frame_19/delay_sec = 0.0
frame_20/texture = ExtResource( 20 )
frame_20/delay_sec = 0.0

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 28 )
region_rect = Rect2( 0, 0, 49, 45 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 28 )
region_rect = Rect2( 0, 0, 49, 45 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 29 )
region_rect = Rect2( 0, 0, 49, 45 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 30 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 64.7179, 22.4543 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 30 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 30 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 30 )

[node name="Splash" type="Node"]
script = ExtResource( 1 )

[node name="SplashPlayer" parent="." instance=ExtResource( 2 )]

[node name="UI" parent="." instance=ExtResource( 3 )]
script = ExtResource( 4 )

[node name="AudioController" parent="." instance=ExtResource( 5 )]
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
margin_top = -1.10382
margin_right = 1025.0
margin_bottom = 597.896
texture = SubResource( 1 )
expand = true

[node name="Node2D" type="Node2D" parent="TextureRect"]

[node name="buttonStart" type="Button" parent="TextureRect/Node2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 445.5
margin_top = 275.0
margin_right = 579.5
margin_bottom = 324.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.207843, 0.729412, 0.952941, 0 )
text = "Start Game"

[node name="HitBox" type="StaticBody2D" parent="TextureRect/Node2D"]
position = Vector2( 445.5, 275 )
script = ExtResource( 31 )

[node name="Bar2" parent="TextureRect/Node2D/HitBox" instance=ExtResource( 32 )]
margin_left = -32.8607
margin_top = -40.5458
margin_right = 363.139
margin_bottom = 12.4542
rect_scale = Vector2( 0.5, 0.5 )
script = ExtResource( 33 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TextureRect/Node2D/HitBox"]
position = Vector2( 65.0612, 22.8593 )
shape = SubResource( 7 )

[node name="Explosion" parent="TextureRect/Node2D/HitBox" instance=ExtResource( 34 )]
visible = false
position = Vector2( 69.0379, 24.3352 )
animation = "fire"

[node name="Tween" type="Tween" parent="TextureRect/Node2D/HitBox"]

[node name="labelTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -19.5
margin_top = 98.8962
margin_right = 20.5
margin_bottom = 112.896
text = "Title"

[node name="labelTitle2" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -469.198
margin_top = 345.657
margin_right = -259.198
margin_bottom = 359.657
custom_fonts/font = SubResource( 8 )
script = ExtResource( 35 )

[node name="labelTitle3" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 184.881
margin_top = 237.704
margin_right = 463.881
margin_bottom = 303.704
custom_fonts/font = SubResource( 9 )
autowrap = true
script = ExtResource( 36 )

[node name="labelTitle4" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = 30.0
margin_right = 68.0
margin_bottom = 246.0
custom_fonts/font = SubResource( 10 )
text = "Destroy the Start button to play!"
autowrap = true
script = ExtResource( 37 )
[connection signal="start" from="AudioController" to="." method="_on_AudioController_start"]
[connection signal="pressed" from="TextureRect/Node2D/buttonStart" to="." method="_on_buttonStart_pressed"]
[connection signal="death_sound" from="TextureRect/Node2D/HitBox" to="SplashPlayer" method="_on_RigidBody2D_death_sound"]
[connection signal="animation_finished" from="TextureRect/Node2D/HitBox/Explosion" to="TextureRect/Node2D/HitBox" method="_on_Explosion_animation_finished"]
